--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="boxes mt-10 flex flex-wrap gap-x-40 gap-y-20 justify-center py-10">
             <div class="box relative flex flex-col items-center transition transform duration-500 border border-transparent hover:border-black h-[60vh] w-[65vh] rounded-4xl hover:scale-[1.02]">
                 <img data-scroll data-scroll-speed="3" class="absolute opacity-60 h-40 w-40 bg-contain mt-32" src="ackt-logo2.png" alt="">
-                <h2 class="px-1 py-7 font-bold font-mono tracking-wider text-center text-[1.5rem] uppercase">ACKT</h2>
+                <h2 data-scroll data-scroll-speed="2" class="px-1 py-7 font-bold font-mono tracking-wider text-center text-[1.5rem] uppercase">ACKT</h2>
                 <ul class="flex flex-col gap-7 justify-center">
                     <li class="flex gap-2 align-middle text-[1.15rem] font-serif"><div class="check h-5 w-5 border-[1.5px] border-black bg-white rounded-[25%]"></div>Module 1 : Ampilfiers</li>
                     <li class="flex gap-2 align-middle text-[1.15rem] font-serif"><div class="check h-5 w-5 border-[1.5px] border-black bg-white rounded-[25%]"></div>Module 2 : Feedback Topologies</li>
@@ -50,7 +50,7 @@
             </div>
             <div  class="box flex flex-col items-center transition transform duration-500 border border-transparent hover:border-black h-[75vh] w-[65vh] rounded-4xl hover:scale-[1.02]">
                 <img data-scroll data-scroll-speed="3" class="absolute opacity-70 h-48 w-48 bg-contain mt-40" src="acomm-logo.png" alt="">
-                <h2 class="px-1 py-7 font-bold font-mono tracking-wider text-center text-[1.5rem] uppercase">Acomm</h2>
+                <h2 data-scroll data-scroll-speed="2" class="px-1 py-7 font-bold font-mono tracking-wider text-center text-[1.5rem] uppercase">Acomm</h2>
                 <ul class="flex flex-col gap-7 justify-center">
                     <li class="flex gap-2 align-middle text-[1.15rem] font-serif"><div class="check h-5 w-5 border-[1.5px] border-black bg-white rounded-[25%]"></div>Module 1 : Introduction</li>
                     <li class="flex gap-2 align-middle text-[1.15rem] font-serif"><div class="check h-5 w-5 border-[1.5px] border-black bg-white rounded-[25%]"></div>Module 2 : Continuous Wave  LM</li>
@@ -63,7 +63,7 @@
             </div>
             <div class="box flex flex-col items-center transition transform duration-500 border border-transparent hover:border-black h-[60vh] w-[65vh] rounded-4xl hover:scale-[1.02]">
                 <img data-scroll data-scroll-speed="3" class="absolute opacity-60 h-40 w-40 bg-contain mt-32" src="transducer-logo-modified.png" alt="">
-                <h2 class="px-1 py-7 font-bold font-mono tracking-wider text-center text-[1.5rem] uppercase">Instru</h2>
+                <h2 data-scroll data-scroll-speed="2" class="px-1 py-7 font-bold font-mono tracking-wider text-center text-[1.5rem] uppercase">Instru</h2>
                 <ul class="flex flex-col gap-7 justify-center">
                     <li class="flex gap-2 align-middle text-[1.15rem] font-serif"><div class="check h-5 w-5 border-[1.5px] border-black bg-white rounded-[25%]"></div>Module 1 : Measurement and Error</li>
                     <li class="flex gap-2 align-middle text-[1.15rem] font-serif"><div class="check h-5 w-5 border-[1.5px] border-black bg-white rounded-[25%]"></div>Module 2 : Bridges</li>
@@ -74,7 +74,7 @@
             </div>
             <div class="box flex flex-col items-center transition transform duration-500 border border-transparent hover:border-black h-[60vh] w-[65vh] rounded-4xl hover:scale-[1.02]">
                 <img data-scroll data-scroll-speed="3" class="absolute opacity-60 h-40 w-60 bg-contain mt-32" src="eem-logo-modified.png" alt="">
-                <h2 class="px-1 py-7 font-bold font-mono tracking-wider text-center text-[1.5rem] uppercase">EEM</h2>
+                <h2 data-scroll data-scroll-speed="2" class="px-1 py-7 font-bold font-mono tracking-wider text-center text-[1.5rem] uppercase">EEM</h2>
                 <ul class="flex flex-col gap-7 justify-center">
                     <li class="flex gap-2 align-middle text-[1.15rem] font-serif"><div class="check h-5 w-5 border-[1.5px] border-black bg-white rounded-[25%]"></div>Module 1 : Elementary Material</li>
                     <li class="flex gap-2 align-middle text-[1.15rem] font-serif"><div class="check h-5 w-5 border-[1.5px] border-black bg-white rounded-[25%]"></div>Module 2 : Dielectric Materials</li>
@@ -85,7 +85,7 @@
             </div>
             <div class="box flex flex-col items-center transition transform duration-500 border border-transparent hover:border-black h-[70vh] w-[65vh] rounded-4xl hover:scale-[1.02]">
                 <img data-scroll data-scroll-speed="3" class="absolute opacity-60 h-40 w-40 bg-contain mt-32" src="dice-logo.png" alt="">
-                <h2 class="px-1 py-7 font-bold font-mono tracking-wider text-center text-[1.5rem] uppercase">LARP</h2>
+                <h2 data-scroll data-scroll-speed="2" class="px-1 py-7 font-bold font-mono tracking-wider text-center text-[1.5rem] uppercase">LARP</h2>
                 <ul class="flex flex-col gap-7 justify-center">
                     <li class="flex gap-2 align-middle text-[1.15rem] font-serif"><div class="check h-5 w-5 border-[1.5px] border-black bg-white rounded-[25%]"></div>Module 1 : Linear Algebra</li>
                     <li class="flex gap-2 align-middle text-[1.15rem] font-serif"><div class="check h-5 w-5 border-[1.5px] border-black bg-white rounded-[25%]"></div>Module 2 : Spectral Decomposition</li>
@@ -97,7 +97,7 @@
             </div>
             <div class="box flex flex-col items-center transition transform duration-500 border border-transparent hover:border-black h-[60vh] w-[65vh] rounded-4xl hover:scale-[1.02]">
                 <img data-scroll data-scroll-speed="3" class="absolute opacity-60 h-40 w-40 bg-contain mt-32" src="tree-logo.png" alt="">
-                <h2 class="px-1 py-7 font-bold font-mono tracking-wider text-center text-[1.5rem] uppercase">EVS</h2>
+                <h2 data-scroll data-scroll-speed="2" class="px-1 py-7 font-bold font-mono tracking-wider text-center text-[1.5rem] uppercase">EVS</h2>
                 <ul class="flex flex-col gap-7 justify-center">
                     <li class="flex gap-2 align-middle text-[1.15rem] font-serif"><div class="check h-5 w-5 border-[1.5px] border-black bg-white rounded-[25%]"></div>Module 1 : Environment</li>
                     <li class="flex gap-2 align-middle text-[1.15rem] font-serif"><div class="check h-5 w-5 border-[1.5px] border-black bg-white rounded-[25%]"></div>Module 2 : Land Use and Abuse</li>
